# ai-literacy-superpowers

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Gemfile  HARNESS.md  LICENSE  MODEL_ROUTING.md  ONBOARDING.md  README.md  REFLECTION_LOG.md  mkdocs.yml  requirements.txt
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
agents/: assessor.md  code-reviewer.agent.md  code-reviewer.md  harness-auditor.agent.md  harness-auditor.md  harness-enforcer.md  harness-gc.md  integration-agent.md  orchestrator.md  spec-writer.agent.md
articles/: 01-the-environment-hypothesis.md  02-context-engineering.md  03-constraints-that-bite.md  04-the-entropy-problem.md  05-agents-as-colleagues.md  06-the-learning-loop.md  07-the-assessment-practice.md  08-the-loops-that-learn.md
assessments/: 2026-04-09-portfolio-assessment.md  2026-04-10-assessment.md  2026-04-11-assessment.md  2026-04-28-assessment.md  portfolio-dashboard.html
commands/: assess.md  extract-conventions.md  harness-health.md  harness-init.md  superpowers-init.md  worktree.md
tdad_tests/: README.md  conftest.py  pyproject.toml
tdad_tests/fixtures/convention_sync/: sample_harness.md
tdad_tests/fixtures/cupid-violations/: user_repository.py
tdad_tests/fixtures/observatory_verify/: complete_snapshot.md  missing_enforcement_snapshot.md
tdad_tests/fixtures/procedural/: sample_cost_snapshot.md  sample_governance_audit.md  sample_harness_status.md
tdad_tests/layer0_deterministic/: test-archive-promoted-reflections.sh  test-migrate-reflection-log.sh  test-reflection-log-helpers.sh
tdad_tests/layer0_deterministic/fixtures/: agents-md-with-multi-repo-style.md  reflection-log-many-entries.md  reflection-log-promoted-agents.md  reflection-log-promoted-harness.md  reflection-log-promoted-malformed.md  reflection-log-promoted-supersede.md  reflection-log-promoted-trailing-space.md  reflection-log-single-entry.md
tdad_tests/runner/: __init__.py  plugin.py  scenario.py  sdk.py
tdad_tests/scenarios/agents/assessor/: FINDING-frontmatter-yaml-strictness.md
tdad_tests/scenarios/agents/spec-writer/: creates-spec-with-acceptance-scenarios.md
tdad_tests/scenarios/commands/harness-init/: FINDING-command-tdab-gap.md
tdad_tests/scenarios/skills/dependency-vulnerability-audit/: triggers-on-vulnerability-audit-query.md
tdad_tests/scenarios/skills/docker-scout-audit/: triggers-on-docker-cve-query.md
tdad_tests/scenarios/skills/github-actions-supply-chain/: triggers-on-workflow-security-query.md
tdad_tests/scenarios/skills/literate-programming/: triggers-on-new-source-file-query.md
tdad_tests/scenarios/skills/secrets-detection/: triggers-on-secrets-audit-query.md
tdad_tests/spike_helpers/: __init__.py  convention_sync.py  cost_capture.py  governance_health.py  harness_affordance.py  harness_health.py  harness_status.py  harness_upgrade.py  markdown.py  observatory_verify.py  reflect.py  superpowers_status.py
tdad_tests/tests/: test_command_dispatch_matrix.py  test_command_skill_coverage.py  test_command_wiring.py  test_hooks_structural.py  test_layer0_deterministic.py  test_layer0_script_syntax.py  test_layer1_structural.py  test_layer2_triggers.py  test_layer3_behavioural.py  test_model_cards_structural.py  test_phase2_convention_sync.py  test_phase2_observatory_verify.py  test_phase3_procedural_rollout.py
tests-external/: README.md  conftest.py  pyproject.toml
tests-external/runner/: plugin.py
tests-external/scenarios/skills/cupid-code-review/: identifies-violations.md  triggers-on-cupid-query.md
tests-external/tests/: test_layer1_structural.py  test_layer2_triggers.py  test_layer3_behavioural.py
(+536 files in other folders)
